--- a/web/index.html
+++ b/web/index.html
@@ -1,1 +1,124 @@
+<!doctype html>
+<html lang="en">
+<head>
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+
+  <!-- Bootstrap -->
+  <link rel="stylesheet" type="text/css"  href="./css/bootstrap.css">
+  <link rel="stylesheet" type="text/css" href="./fonts/font-awesome/css/font-awesome.css">
+
+<!-- Stylesheet
+  ================================================== -->
+  <link rel="stylesheet" type="text/css"  href="./css/style.css">
+  <link rel="stylesheet" type="text/css" href="./css/nivo-lightbox/nivo-lightbox.css">
+  <link rel="stylesheet" type="text/css" href="./css/nivo-lightbox/default.css">
+  <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700,800,600,300' rel='stylesheet' type='text/css'>
+  <script type="text/javascript" src="./js/modernizr.custom.js"></script>
+
+
+  <title>G12 - Web of News</title>
+</head>
+<body>
+  <!-- Header -->
+  <header id="header">
+    <div class="intro">
+      <div class="container">
+        <div class="row">
+          <div class="intro-text">
+            <h1>Web of News</h1>
+            <hr>
+            <p>G12 • AIW • Kevin - Víctor - Sergi</p>
+            <a href="https://www.upf.edu/" class="btn btn-default btn-lg page-scroll">Learn More</a> </div>
+          </div>
+        </div>
+      </div>
+    </header>
+    <!-- Navigation -->
+    <div id="nav">
+      <nav class="navbar navbar-custom">
+        <div class="container">
+          <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse"> <i class="fa fa-bars"></i> </button>
+          </div>
+
+#gta (1) -> Positive: 0 Negative: 1 Neutral: 0#callofduty (0) -> Positive: 0 Negative: 0 Neutral: 0#trump (0) -> Positive: 0 Negative: 0 Neutral: 0#game (2) -> Positive: 0 Negative: 2 Neutral: 0#conservative (0) -> Positive: 0 Negative: 0 Neutral: 0#politica (0) -> Positive: 0 Negative: 0 Neutral: 0#ucl (0) -> Positive: 0 Negative: 0 Neutral: 0#love (0) -> Positive: 0 Negative: 0 Neutral: 0#nintendo (1) -> Positive: 0 Negative: 0 Neutral: 1#chelsea (0) -> Positive: 0 Negative: 0 Neutral: 0#youtube (6) -> Positive: 0 Negative: 4 Neutral: 2#pubg (0) -> Positive: 0 Negative: 0 Neutral: 0#instagamer (0) -> Positive: 0 Negative: 0 Neutral: 0#españa (0) -> Positive: 0 Negative: 0 Neutral: 0#usa (0) -> Positive: 0 Negative: 0 Neutral: 0#boxing (0) -> Positive: 0 Negative: 0 Neutral: 0#freedom (0) -> Positive: 0 Negative: 0 Neutral: 0#history (0) -> Positive: 0 Negative: 0 Neutral: 0#democrat (0) -> Positive: 0 Negative: 0 Neutral: 0#twitch (12) -> Positive: 0 Negative: 8 Neutral: 4#a (0) -> Positive: 0 Negative: 0 Neutral: 0#laliga (0) -> Positive: 0 Negative: 0 Neutral: 0#fitness (0) -> Positive: 0 Negative: 0 Neutral: 0#team (0) -> Positive: 0 Negative: 0 Neutral: 0#like (8) -> Positive: 0 Negative: 8 Neutral: 0#gamergirl (0) -> Positive: 0 Negative: 0 Neutral: 0#vote (0) -> Positive: 0 Negative: 0 Neutral: 0#o (0) -> Positive: 0 Negative: 0 Neutral: 0#winners (0) -> Positive: 0 Negative: 0 Neutral: 0#videogame (0) -> Positive: 0 Negative: 0 Neutral: 0#juventus (0) -> Positive: 0 Negative: 0 Neutral: 0#gaminglife (0) -> Positive: 0 Negative: 0 Neutral: 0#barcelona (0) -> Positive: 0 Negative: 0 Neutral: 0#pcgaming (0) -> Positive: 0 Negative: 0 Neutral: 0#liberal (0) -> Positive: 0 Negative: 0 Neutral: 0#maga (0) -> Positive: 0 Negative: 0 Neutral: 0#instagaming (0) -> Positive: 0 Negative: 0 Neutral: 0#government (0) -> Positive: 0 Negative: 0 Neutral: 0#basketball (0) -> Positive: 0 Negative: 0 Neutral: 0#bjp (0) -> Positive: 0 Negative: 0 Neutral: 0#pressos (0) -> Positive: 0 Negative: 0 Neutral: 0#generalitat (0) -> Positive: 0 Negative: 0 Neutral: 0#videogames (0) -> Positive: 0 Negative: 0 Neutral: 0#president (0) -> Positive: 0 Negative: 0 Neutral: 0#pfc (0) -> Positive: 0 Negative: 0 Neutral: 0#democrats (0) -> Positive: 0 Negative: 0 Neutral: 0#champion (0) -> Positive: 0 Negative: 0 Neutral: 0#cdr (0) -> Positive: 0 Negative: 0 Neutral: 0#india (0) -> Positive: 0 Negative: 0 Neutral: 0#america (0) -> Positive: 0 Negative: 0 Neutral: 0#congress (0) -> Positive: 0 Negative: 0 Neutral: 0#follow (6) -> Positive: 0 Negative: 2 Neutral: 4#win (3) -> Positive: 0 Negative: 1 Neutral: 2#streamer (3) -> Positive: 0 Negative: 1 Neutral: 2#catalunya (0) -> Positive: 0 Negative: 0 Neutral: 0#vox (0) -> Positive: 0 Negative: 0 Neutral: 0#soccer (0) -> Positive: 0 Negative: 0 Neutral: 0#realmadrid (0) -> Positive: 0 Negative: 0 Neutral: 0#gamers (0) -> Positive: 0 Negative: 0 Neutral: 0#futbol (0) -> Positive: 0 Negative: 0 Neutral: 0#xbox (0) -> Positive: 0 Negative: 0 Neutral: 0#gaming (3) -> Positive: 0 Negative: 2 Neutral: 1#elections (0) -> Positive: 0 Negative: 0 Neutral: 0#pc (0) -> Positive: 0 Negative: 0 Neutral: 0#news (0) -> Positive: 0 Negative: 0 Neutral: 0#fortnite (11) -> Positive: 0 Negative: 4 Neutral: 7#pp (0) -> Positive: 0 Negative: 0 Neutral: 0#ps (0) -> Positive: 0 Negative: 0 Neutral: 0#playstation (0) -> Positive: 0 Negative: 0 Neutral: 0#liverpool (0) -> Positive: 0 Negative: 0 Neutral: 0#championsleague (0) -> Positive: 0 Negative: 0 Neutral: 0#memes (0) -> Positive: 0 Negative: 0 Neutral: 0#election (0) -> Positive: 0 Negative: 0 Neutral: 0#games (1) -> Positive: 0 Negative: 0 Neutral: 1#donaldtrump (1) -> Positive: 0 Negative: 1 Neutral: 0#premierleague (0) -> Positive: 0 Negative: 0 Neutral: 0#gamer (4) -> Positive: 1 Negative: 1 Neutral: 2#football (0) -> Positive: 0 Negative: 0 Neutral: 0#politicalmemes (0) -> Positive: 0 Negative: 0 Neutral: 0#champions (0) -> Positive: 0 Negative: 0 Neutral: 0#sport (0) -> Positive: 0 Negative: 0 Neutral: 0#meme (1) -> Positive: 0 Negative: 1 Neutral: 0#xboxone (0) -> Positive: 0 Negative: 0 Neutral: 0#proces (0) -> Positive: 0 Negative: 0 Neutral: 0#sports (0) -> Positive: 0 Negative: 0 Neutral: 0#brexit (0) -> Positive: 0 Negative: 0 Neutral: 0#bhfyp (0) -> Positive: 0 Negative: 0 Neutral: 0#fifa (0) -> Positive: 0 Negative: 0 Neutral: 0#politics (0) -> Positive: 0 Negative: 0 Neutral: 0#republican (0) -> Positive: 0 Negative: 0 Neutral: 0        </div>
+    </nav>
+</div>
+<div class="contentTabulator" id="About" style="display:none;padding:2%;">
+    <div class="notice"><h2>About</h2></a>
+        <p>Somos el equipo 12:</p>
+        <br>
+        <p>Formado por: Kevin Romero, Víctor Jordán y Sergi Linares</p>
+    </div>
+</div></body></html>    <script type="text/javascript">
+      about.hide();
+      hashTags.hide();
+      usersMentioned.hide();
+      date.hide();
+      heatMap.hide();
+      circleMap.hide();
+
+
+      function showStuff(element)  {
+        var about = $('#About');
+        var hashTags = $('#Hashtags');
+        var usersMentioned = $('#UsersMentioned');
+        var date = $('#Date');
+        var heatMap = $('#HeatMap');
+        var circleMap = $('#CircleMap');
+        if(element === "About"){
+          hashTags.hide();
+          about.show();
+          usersMentioned.hide();
+          date.hide();
+          heatMap.hide();
+          circleMap.hide();
+        }else if(element === "Hashtags"){
+          hashTags.show();
+          about.hide();
+          usersMentioned.hide();
+          date.hide();
+          heatMap.hide();
+          circleMap.hide();     
+        }else if(element === "Date"){
+          hashTags.hide();
+          about.hide();
+          usersMentioned.hide();
+          date.show();
+          heatMap.hide();
+          circleMap.hide();
+        }else if(element === "HeatMap"){
+          hashTags.hide();
+          about.hide();
+          usersMentioned.hide();
+          date.hide();
+          heatMap.show();
+          circleMap.hide();
+        }else if(element === "CircleMap"){
+          hashTags.hide();
+          about.hide();
+          usersMentioned.hide();
+          date.hide();
+          heatMap.hide();
+          circleMap.show();
+        }
+
+      }
+    </script>
+    <script type="text/javascript" src="./js/jquery.1.11.1.js"></script> 
+    <script type="text/javascript" src="./js/bootstrap.js"></script> 
+    <script type="text/javascript" src="./js/SmoothScroll.js"></script> 
+    <script type="text/javascript" src="./js/nivo-lightbox.js"></script> 
+    <script type="text/javascript" src="./js/jquery.isotope.js"></script> 
+    <script type="text/javascript" src="./js/jqBootstrapValidation.js"></script> 
+    <script type="text/javascript" src="./js/contact_me.js"></script> 
+    <script type="text/javascript" src="./js/main.js"></script>
+  </body>
+</html>
+
+
+
 
